small changes in html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-    <link
+    <link 
       rel="icon"
       type="image/png"
       sizes="32x32"
@@ -42,7 +42,7 @@
           </div>
         </div>
       </section>
-      <div class="form-section" id="form-section">
+      <div class="content-section" id="form-section">
         <form class="form" id="form">
           <div>
             <label for="holder-name-input">Cardholder name</label>
@@ -81,7 +81,7 @@
         </form>
       </div>
 
-      <div class="form-section hidden" id="thankyou">
+      <section class="content-section hidden" id="thankyou">
         <div class="thankyou">
           <img src="images/icon-complete.svg" alt="complete icon" />
 
@@ -94,7 +94,6 @@
       </div>
     </main>
 
-    <!-- Completed state start -->
 
     <div class="attribution">
       Challenge by
@@ -103,6 +102,6 @@
       >. Coded by <a href="https://github.com/imohib168">Mohib Ismail</a>.
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
