--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
           <p>We've added your card details</p>
 
-          <button type="button" class="btn">Continue</button>
+          <button type="button" class="btn" onclick="successContinue()">Continue</button>
         </div>
       </div>
     </main>
