--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 src="images/card-logo.svg"
                 alt="credit-card-logo"
               />
-              <p class="acc-no" id="card-number">0000 0000 0000 0000</p>
+              <h2 class="acc-no" id="card-number">0000 0000 0000 0000</h2>
               <div class="cust-info">
-                <p class="cust-name" id="card-holder-name">Jane Appleseed</p>
-                <p class="cust-exp"><span id="month">00</span>&nbsp;/&nbsp;<span id="year">00</span></p>
+                <h4 class="cust-name" id="card-holder-name">Jane Appleseed</p>
+                <h4 class="cust-exp"><span id="month">00</span>&nbsp;/&nbsp;<span id="year">00</span></h4>
               </div>
             </div>
           </div>
@@ -38,7 +38,7 @@
         <div class="main-card-back">
           <div class="back-card">
             <img src="images/bg-card-back.png" alt="credit card back" />
-            <p class="cvc" id="cvc">000</p>
+            <h5 class="cvc" id="cvc">000</h5>
           </div>
         </div>
       </section>
@@ -94,12 +94,12 @@
       </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/imohib168">Mohib Ismail</a>.
-    </div>
+    </footer>
 
 
 
