--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               />
               <h2 class="acc-no" id="card-number">0000 0000 0000 0000</h2>
               <div class="cust-info">
-                <h4 class="cust-name" id="card-holder-name">Jane Appleseed</p>
+                <h4 class="cust-name" id="card-holder-name">Jane Appleseed</h4>
                 <h4 class="cust-exp"><span id="month">00</span>&nbsp;/&nbsp;<span id="year">00</span></h4>
               </div>
             </div>
